# radarr-py

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AddMovieMethod.md  AddMovieOptions.md  AlternativeTitle.md  AlternativeTitleApi.md  AlternativeTitleResource.md  ApiInfoApi.md  ApiInfoResource.md  AuthenticationApi.md  AutoTaggingApi.md  AutoTaggingResource.md  AutoTaggingSpecificationSchema.md  BackupApi.md  BackupResource.md  BlocklistApi.md  BlocklistBulkResource.md  BlocklistResource.md  BlocklistResourcePagingResource.md  CalendarApi.md  CalendarFeedApi.md  CalendarReleaseType.md  CollectionApi.md  CollectionMovieResource.md  CollectionResource.md  CollectionUpdateResource.md  ColonReplacementFormat.md  Command.md  CommandApi.md  CommandResource.md  CommandResult.md  ContractField.md  CreditApi.md  CreditResource.md  CreditType.md  CustomFilterApi.md  CustomFilterResource.md  CustomFormatApi.md  CustomFormatBulkResource.md  CustomFormatResource.md  CustomFormatSpecificationSchema.md  CutoffApi.md  (+169 more)
radarr/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
radarr/api/: __init__.py  alternative_title_api.py  api_info_api.py  authentication_api.py  auto_tagging_api.py  backup_api.py  blocklist_api.py  calendar_api.py  calendar_feed_api.py  collection_api.py  command_api.py  credit_api.py  custom_filter_api.py  custom_format_api.py  cutoff_api.py  delay_profile_api.py  disk_space_api.py  download_client_api.py  download_client_config_api.py  extra_file_api.py  log_api.py  (+54 more)
(+153 files in other folders)
