# coding: utf-8

[project]
name = "radarr-py"
version = "0.2.1"
dependencies = [
    "urllib3 >= 1.25.3",
    "python-dateutil",
    "requests>=2.28.1",
    "pydantic>=1.10.2",
    "aenum"
]
description = "Radarr API wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/devopsarr/radarr-py"
"Bug Tracker" = "https://github.com/devopsarr/radarr-py/issues"